--- a/.github/workflows/hub-mirror.yml
+++ b/.github/workflows/hub-mirror.yml
@@ -26,8 +26,8 @@ jobs:
           go-version: '1.20'
       # 3. 运行 go 代码
       - name: Run code
-        run: go run main.go --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_TOKEN }} --repository=${{ secrets.DOCKER_REPOSITORY }} --content='${{ github.event.issue.body }}' --maxContent=11 --outputPath=output.md
-      # 4. 当成功输出 output.md 文件时，为 issues 添加评论
+        run: go run main.go --username=${{ secrets.ALIYUN_REGISTRY_USER }} --password=${{ secrets.ALIYUN_REGISTRY_PASSWORD }} --repository=${{ secrets.ALIYUN_REGISTRY }} --content='${{ github.event.issue.body }}' --maxContent=11 --outputPath=output.md
+        # 4. 当成功输出 output.md 文件时，为 issues 添加评论
       - name: Add comment
         if: ${{ hashFiles('output.md') }}
         uses: actions/github-script@v5
