--- a/.github/workflows/hub-mirror.yml
+++ b/.github/workflows/hub-mirror.yml
@@ -13,7 +13,7 @@ jobs:
     # 运行环境
     runs-on: ubuntu-latest
     # 运行条件 => issues 的 label 包含 origin-image
-    if: contains(github.event.issue.labels.*.name, 'origin-image')
+    # if: contains(github.event.issue.labels.*.name, 'origin-image')
     # 镜像转换任务的步骤列表
     steps:
       # 1. 切换分支（默认主分支）
