--- a/.github/workflows/close-issues.yml
+++ b/.github/workflows/close-issues.yml
@@ -3,6 +3,11 @@ on:
   workflow_dispatch:
   schedule:
     - cron: '00 10 * * *'
+permissions:
+  issues: write 
+  pull-requests: write 
+  
+
 
 jobs:
   stale:
